--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,3 +30,14 @@ label {
     font-weight: bold;
     color: #333;
 }
+
+input[type="text"],
+input[type="number"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
