--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,3 +41,17 @@ textarea {
     border-radius: 4px;
     font-size: 16px;
 }
+
+button[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #555;
+}
