--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,3 +55,17 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #555;
 }
+
+#expenseList {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 400px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#expenseList p {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
