--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,3 +69,18 @@ button[type="submit"]:hover {
     margin-bottom: 10px;
     font-size: 18px;
 }
+
+button[type="button"] {
+    background-color: #e74c3c;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+button[type="button"]:hover {
+    background-color: #c0392b;
+}
