--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,3 +84,9 @@ button[type="button"] {
 button[type="button"]:hover {
     background-color: #c0392b;
 }
+
+#totalExpenses {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
